refactor: SpeedTouchPlayers 동기화 및 불변성 강화
- players 리스트 초기화 시 Collections.synchronizedList에서 List.copyOf로 변경
  - 불변 리스트 활용으로 동기화 및 불필요한 오버헤드 제거
- isAllFinished 메서드에 synchronized 추가
  - 멀티스레드 환경에서의 안정성 보장
- getPlayers 메서드 반환값을 Collections.unmodifiableList에서 불변 리스트로 단순화
  - 코드 간결화 및 일관성 강화